--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravelrus/sleepingowl": "4.*@dev",
         "barryvdh/laravel-debugbar": "^2.3",
         "fzaninotto/faker": "^1.6",
-        "laravelcollective/html": "^5.3.0"
+        "laravelcollective/html": "^5.3.0",
+        "irazasyed/telegram-bot-sdk": "dev-master"
     },
     "require-dev": {
         "mockery/mockery": "0.9.*",
